tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-selected-import-binding.wyst
module demo
import library { widen }
